# hcl-model

./: .coveragerc  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  LICENSE.md  LICENSE.txt  Pipfile  README.md  hcl_model.md  hcl_model_math.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.cfg  setup.py
.github/workflows/: docs.yaml  pytest.yaml  wheels.yml
data_preprocessing/: index.html
docs/: Makefile  conf.py  hcl_model_math.md  index.rst
hcl_model_math/: index.html
search/: search_index.json
src/hcl_model/: __init__.py  calendar_reader.py  calendar_transformer.py  labels.py  model_base.py  model_hcl_generic.py  model_sarimax.py  skeleton.py  time_series_model_archetype.py  utils.py
src/hcl_model/transformers/: add_automatic_seasonal_dummies.py  add_holiday_dummies.py  add_holiday_triangles.py  add_periodic_splines.py  calendar.py  feature_union.py  outlier_correction.py  structural_breaks.py
src/hcl_model/utils/: check_x_y.py  construct_calendar_exogenous.py  smooth.py
tests/: conftest.py  test_calendar_reader.py  test_calendar_transformer.py  test_model_common.py  test_model_hcl_generic.py  test_model_sarimax.py  test_skeleton.py  test_utils.py
tests/transformers/: test_add_automatic_seasonal_dummies.py  test_add_holiday_dummies.py  test_add_holiday_triangles.py  test_add_periodic_splines.py  test_calendar.py  test_outlier_correction.py  test_truncate.py
tests/utils/: test_calendar_reader.py  test_construct_calendar_exogenous.py  test_smooth.py
